--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,73 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: Arial sans-serif;
-  font-size: 14px;
 }
 
-nav {
-  background-color: #2c698d;
-}
-nav ul {
+.navbar {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff; /* светло зелено */
+  padding: 10px 40px;
+  height: 120px;
+}
+
+.navbar-left {
+  display: flex;
+  align-items: center;
   gap: 10px;
+}
+
+.logo {
+  height: 200px;
+}
+
+
+
+.nav-menu {
+  display: flex;
   list-style: none;
-  padding: 10px 5px;
+  gap: 60px;
+  margin-left: 110px;
 }
-nav ul li {
-  padding: 5px 10px;
-  border-radius: 10px;
-}
-nav ul li:hover {
-  background-color: #272643;
-}
-nav ul li a {
-  font-size: 20px;
+
+.nav-menu li a {
   text-decoration: none;
-  color: #ffffff;
+  font-weight: bold;
+  font-size: 50px;
+  color: #197d32;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
+  transition: color 0.2s;
+}
+
+.nav-menu li a:hover {
+  color: #38423f;
+
+}
+
+.navbar-right {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: #197d32;
+  font-weight: 1000;
+  font-size: 30px;
+}
+
+.phone-icon {
+  height: 65px;
+  width: 65px;
+  margin-left: 10px;
+  object-fit: contain;
 }
 
 #container {
-  padding: 10px 15px;
   display: flex;
   gap: 10px;
   flex-direction: column;
-  height: 75vh;
+  height: 100vh;
 }
 #container button {
   background-color: #facd60;
@@ -49,7 +84,8 @@ nav ul li a {
 }
 #container h1 {
   margin-bottom: 10px;
-  font-size: 30px;
+  font-size: 120px;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
 }
 #container form {
   display: flex;
@@ -82,5 +118,85 @@ nav ul li a {
   display: flex;
   gap: 20px;
 }
+
+.hero {
+  /*noinspection CssUnknownTarget*/
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+  url('background_home.jpg') no-repeat center center/cover;
+
+  min-height: 90vh;
+    display: flex;
+    justify-content: center;   /* хоризонтално центриране */
+    align-items: center;       /* вертикално центриране */
+    text-align: center;
+    position: relative;
+    color: white;
+
+}
+
+
+.hero-text {
+
+  font-size: 30px;
+  padding-left: 60px;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9);
+}
+
+.vehicle-section {
+  padding: 60px 20px;
+  text-align: center;
+  background-color: #ffffff;
+
+}
+
+.vehicle-section h2 {
+  font-size: 2.8rem;
+  margin-bottom: 40px;
+  color: #111;
+}
+
+.vehicle-section h3 {
+  font-size: 2.8rem;
+  margin-bottom: 40px;
+  color: #197d32;
+  font-weight: 1500;
+}
+
+.vehicle-cards {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  flex-wrap: wrap;
+
+}
+
+
+.vehicle-card {
+  background-color: #f1f1f1;
+  border-radius: 20px;
+  padding: 30px;
+  width: 480px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
+  text-decoration: none;
+}
+
+.vehicle-card:hover {
+  transform: scale(1.05);
+}
+
+.vehicle-card img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.vehicle-card p {
+  margin-top: 15px;
+  font-size: 50px;
+  font-weight: 500;
+  color: #222;
+}
+
 
 /*# sourceMappingURL=App.css.map */
