Add page style and updated database

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -198,7 +198,9 @@
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
   url('second_background.png') no-repeat center center/cover;
 
+
 }
+
 .card {
   display: flex;
   flex-direction: column;
@@ -269,6 +271,80 @@
   transition: all 0.25s ease-in-out;
 
 }
+
+.submit-btn {
+  background-color: #006400;
+  color: #fff;
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+  border-radius: 10px;
+  font-weight: 600;
+  font-size: 15px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  text-decoration: none;
+  display: inline-block;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.modal-content form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-top: 20px;
+}
+
+.modal-content label {
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
+  color: #222;
+  font-size: 15px;
+}
+
+.modal-content input,
+.modal-content textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 14px;
+  margin-top: 5px;
+  transition: border 0.3s ease;
+  outline: none;
+}
+
+.modal-content input:focus,
+.modal-content textarea:focus {
+  border-color: #006400;
+  box-shadow: 0 0 0 2px rgba(0, 100, 0, 0.1);
+}
+
+.Add-btn {
+  background-color: #006400;
+  color: #fff;
+  padding: 10px 20px;
+  margin: 10px;
+  border: none;
+  font-weight: 600;
+  font-size: 25px;
+  transition: all 0.3s ease;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+
+}
+
+.center{
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
+
+
 
 
 /*# sourceMappingURL=App.css.map */
