--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -344,7 +344,7 @@
   padding: 10px;
 }
 
-/* wrapper flex container */
+/* ADD-BUTTONS ADD PAGE */
 .add-buttons {
   display: flex;
   justify-content: center;  /* centers both buttons */
