--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -327,12 +327,12 @@
 
 /* variant colors */
 .add-buttons__btn--scooter {
-  background: #4caf50;
+  background: #006400FF;
   color: #fff;
 }
 
 .add-buttons__btn--bike {
-  background: #2196f3;
+  background: #006400FF;
   color: #fff;
 }
 
@@ -417,6 +417,67 @@
   color: #333;
 }
 
+/*Edit page bike and scooter*/
+.edit-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.edit-title {
+  font-size: 28px;
+  margin-bottom: 20px;
+  color: #0a3d0a;
+}
+
+.edit-form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 100%;
+  max-width: 400px;
+  padding: 25px;
+  background-color: #f8f8f8;
+  border-radius: 10px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+
+.edit-form label {
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
+  color: #333;
+}
+
+.edit-form input,
+.edit-form textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 14px;
+  resize: none;
+}
+
+.edit-form textarea {
+  min-height: 80px;
+}
+
+.edit-form button {
+  margin-top: 15px;
+  padding: 12px;
+  background-color: #007f35;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.edit-form button:hover {
+  background-color: #006628;
+}
 
 
 
